imports/plugins/included/default-theme/client/styles/dashboard/orders.less
// TODO: Once reaction ui is enabled, use `rui button success`
.rui.card.order .controls .btn-success {
  .btn-success();
  border-radius: 0;
}


.order-panel {
  cursor: hand;
  cursor: pointer;
}

.order-panel.panel-info {
  box-shadow: 0 0 0 3px @brand-accent-color;
}

.order-panel > .panel-heading {
  .display(flex);
  padding: 0;
}

.order-panel > .panel-body {
  .display(flex);
}

.order-details {
  .display(flex);
  .flex-wrap(wrap);
  .flex(1 1 auto);
  padding: 10px;
}

.order-controls {
  .display(flex);
  .flex-direction(column);
  width: 44px;
  height: 100%;
  button {
    flex: 1 1 auto;
    border-radius: 0;
    height: 100%;
    width: 100%;
  }
}

.order-detail-item {
  .display(flex);
  .flex(1 1 auto);
}

.order-detail-item .cart-totals {
  white-space: nowrap;
}

.order-panel-items {
  flex: 1 1 auto;
}

.order-panel-items .order-item {
  padding: 1rem 1.2rem;
}

.order-panel-status {
  flex: 0 0 auto;
}

.order-item-details .order-detail-title {
  flex: 1 1 auto;
}

.order-item-details .order-detail-quantity {
  flex: 0 0 auto;
}

.order-item-details .order-detail-price {
  flex: 1 1 auto;
  margin-right: 20px;
}

.order-detail-quantity {
  margin-right: 50px;
}


.orders-list{
  .circular-icon {
    width: 40px;
    height: 40px;
    margin: -16px 0px;
    background-size: 40px;
    border: 4px solid rgba(129, 122, 122, 0.62);
    border-radius: 50%;
    padding: 16px;
    display: inline-block;
  }

}

.orders-list-tabs {
  border-bottom: 1px solid @border-color;
}

.order-detail {
    border: 2px solid gray;
}

.orders-grid .h3 {
    margin-top: 0px;
}

.order-list-detail {
  address {
    margin-bottom: 0;
  }
  .order-group-title {
    margin-top: 20px;
    margin-bottom: 5px;
  }

}

.order-item-img {
  height: 75px;
  width: 75px;
}

.order-list-item-details {
  margin-top: 25px;
  padding-bottom: 25px;
  border-bottom: 1px solid @gray-lighter;
}


.order-items {
  list-style-type: none;
  margin-bottom: 0px;
  padding-top: 10px;
  cursor: pointer;

  &.invoice-item {
    padding-top: 8px;
    height: 56px;
    margin-bottom: 10px;
  }

  &.selected {
    background-color: #edfdf8;
  }
}

.order-item {
  .display(flex);
}

.invoice-line-items:hover {
  background-color: @list-group-hover-bg;
  cursor: pointer;
}

.invoice-popover {
  width: 416px;
  height: auto;
  margin-left: -10px;
  padding-top: 0px;
  padding: 10px;
  padding-bottom: 30px;
  border-radius: 4px;
  background-color: #ffffff;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.16);
  border: solid 1px #7894a4;
}

.invoice-popover-controls {
  margin-top: 10px;
  margin-bottom: 10px;
  display: flex;
  width: 100%;
  height: 30px;

  .invoice-popover-selected {
    flex: 7;
    padding-top: 2px;
    padding-left: 10px;

    i {
      font-size: 18px;
    }

    span {
      font-size: 16px;
      left: 5px;
      position: relative;
      top: 0px;
    }
  }

  .invoice-popover-close {
    flex: 1;
  }
}

.invoive-order-items {
  margin-bottom: 10px;
  height: 84px;
  padding: 10px;
  background-color: #f7f7f7;

  .invoice-order-item-tax {
    display: flex;
    width: 100%;
    div {
      flex: 1;

      &.tax-code {
        text-align: right;
      }

      &.tax-cost {
        text-align: right;
      }
    }
  }
}

.invoice-actions {
  display: flex;
  div {
    &.invoice-action-cancel {
      flex: 2;
      margin-right: 10px;
    }
    &.invoice-action-refund {
      flex: 1;
      button {
        width: 100%;
      }
    }
  }
}

.invoice-refund-edited {
  width: 100%;
  padding-bottom: 10px;

  .refund-header {
    display: flex;
    border-bottom: 1px solid #bfbfbf;
    padding: 10px;

    div {
      flex: 1;

      &:first-child {
        flex: 2;
      }

      &:last-child {
        text-align: right;
      }

      span {
        color: @rui-danger;
        font-weight: 600;
      }
    }
  }

  .refund-body {
    margin-top: 10px;
    .refund-item {
      padding: 10px;
      margin-bottom: 4px;
      display: flex;
      background: @rui-danger-bg;

      div {
        flex: 1;

        &:first-child {
          flex: 2
        }

        &:last-child {
          text-align: right;
        }
      }

      &.return {
        span {
          color: @rui-danger
        }
      }
    }
  }

  .refund-include-shipping {
    height: 30px;

    input {
      margin-right: 8px;
    }

    span {
      top: -5px;
      position: relative;
    }
  }
}

.invoice {
  margin-left: -15px;
  margin-right: -15px;
}

.refund-button {
  height: 34px;
  margin-left: 10px;
}

.refund-container {
  margin-top: 10px
}

.cancel-order-btn {
  margin: 10px 0;
}

.roll-up-invoice-list {
  background-color: @pre-bg;
  margin-left: -15px;
  margin-right: -15px;
}

.roll-up-content {
  padding: 15px;
}

.order-item-media {
  .flex(0 0 auto);
  width: 40px;
  margin-left: 15px;

  &.popover-mode {
    margin-left: 0;
  }

  img {
    width: 100%;
  }
}

.order-item-details {
  .display(flex);
  .flex(1 1 auto);
  .margin-left(20px);
  align-items: center;
}

.order-shipments {
  list-style-type: none;
}

// Order form summary
.order-summary-form-group {
  .display(flex);
  .align-items(center);

  > .reason {
    .flex(1 1 auto);
    .margin-right(20px);
    .text-align(right);
  }


  > .amount {
    .flex(0 0 auto);
    width: 100px;
  }

  > .invoice-details {
    .flex(1 1 auto);
    .text-align(right);
  }
}
/* ... */

